Closed Bug 300829 Opened 21 years ago Closed 21 years ago

xpcshell crashes in dump() in optimized build

Categories

(Core :: XPConnect, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: alecf, Assigned: alecf)

Details

Attachments

(1 file)

wow, I just found an age-old bug: if you call dump() from xpcshell, it tries to call nsMemory::Free() on a strdup'ed string, rather than just free(). I'm seeing this crash on windows optimized, but not on debug. Patch forthcoming. I really thought that nsMemory::Free() called PR_Free() which called free() but I crash without this patch, and don't crash with it. is nspr using Zones now in optimized builds?
Here's the patch which stops the crash
Attachment #189352 - Flags: superreview?(shaver)
Attachment #189352 - Flags: review?(dbradley)
Comment on attachment 189352 [details] [diff] [review] use free() rather than nsMemory::Free() r+sr+a=shaver
Attachment #189352 - Flags: superreview?(shaver)
Attachment #189352 - Flags: superreview+
Attachment #189352 - Flags: review?(dbradley)
Attachment #189352 - Flags: review+
Attachment #189352 - Flags: approval1.8b4+
alecf: i believe the problem is that each dll has its own allocation pool, so free in one library doesn't match free in another library.
fix checked into trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: