fix for crash in xpcshell in optimized builds, bug 300829 use free() rather than nsMemory::Free() to free it from the right pool r/sr/a=shaver